--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script type="text/babel">
         const { useState, useEffect } = React;
 
-        // --- ICONS (Inline SVGs to avoid dependencies) ---
+        // --- ICONS ---
         const BookOpen = ({ className }) => (
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></svg>
         );
@@ -364,6 +364,7 @@
             useEffect(() => {
                 const handleKeyDown = (e) => {
                     if (e.key === 'Enter' && feedback) {
+                        e.preventDefault(); // <--- THIS IS THE FIX
                         nextQuestion();
                     }
                 };
