--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Tanakh Shorashim Quiz</title>
     
     <!-- --- CACHE CONTROL FIX --- -->
-    <!-- These lines tell the browser to always fetch the latest version -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
@@ -268,24 +267,29 @@
             return newArray;
         };
 
+        // NEW: Smarter answer checking logic
+        const normalize = (str) => str.toLowerCase().replace(/\s+/g, ' ').trim();
+        const getParts = (str) => str.split(/[\/,]+/).map(p => normalize(p)).filter(p => p.length > 0);
+
         const checkAnswer = (userInput, correct) => {
-            const normUser = userInput.toLowerCase().replace(/\s+/g, ' ').trim();
-            const normCorrect = correct.toLowerCase().replace(/\s+/g, ' ').trim();
-
+            const normUser = normalize(userInput);
+            const normCorrect = normalize(correct);
+            
+            // AND Logic (Comma in correct answer) -> Must provide ALL parts
             if (normCorrect.includes(',')) {
-                const requiredParts = normCorrect.split(',').map(s => s.trim());
-                const userParts = normUser.split(',').map(s => s.trim());
-                if (userParts.length < requiredParts.length) return false;
-                return requiredParts.every(req => 
-                    userParts.some(u => u === req)
-                );
+                const requiredParts = getParts(normCorrect);
+                const userParts = getParts(normUser);
+                return requiredParts.every(req => userParts.includes(req));
             }
 
+            // OR Logic (Slash in correct answer) -> Must provide AT LEAST ONE valid part
             if (normCorrect.includes('/')) {
-                const options = normCorrect.split('/').map(s => s.trim());
-                return options.some(opt => normUser === opt) || normUser === normCorrect;
+                const acceptedOptions = getParts(normCorrect);
+                const userParts = getParts(normUser);
+                return userParts.some(part => acceptedOptions.includes(part));
             }
 
+            // Simple match
             return normUser === normCorrect;
         };
 
@@ -371,7 +375,7 @@
             useEffect(() => {
                 const handleKeyDown = (e) => {
                     if (e.key === 'Enter' && feedback) {
-                        e.preventDefault(); // <--- THIS IS THE FIX
+                        e.preventDefault(); 
                         nextQuestion();
                     }
                 };
