Fix Hebrew characters in DATA_SOURCE - shin vs sin

--- a/index.html
+++ b/index.html
@@ -56,44 +56,44 @@
         // --- DATA ---
         const DATA_SOURCE = [
             { list: 1, shoresh: "א.מ.ר", english: "Say" },
-            { list: 1, shoresh: "ש.ל.ח", english: "Send" },
+            { list: 1, shoresh: "שׁ.ל.ח", english: "Send" },
             { list: 1, shoresh: "ק.ר.א", english: "Call, Greet, Read" },
             { list: 1, shoresh: "ה.י.ה", english: "Be" },
             { list: 1, shoresh: "ה.ל.כ", english: "Go/Walk" },
             { list: 1, shoresh: "ד.ב.ר", english: "Speak" },
             { list: 1, shoresh: "י.ד.ע", english: "Know" },
             { list: 1, shoresh: "י.צ.א", english: "Go out" },
-            { list: 1, shoresh: "ע.ש.ה", english: "Do, Make" },
+            { list: 1, shoresh: "ע.שׂ.ה", english: "Do, Make" },
             { list: 1, shoresh: "ל.ק.ח", english: "Take" },
             { list: 2, shoresh: "ע.מ.ד", english: "Stand" },
             { list: 2, shoresh: "ע.ב.ר", english: "Pass" },
-            { list: 2, shoresh: "ש.מ.ע", english: "Hear/Listen" },
+            { list: 2, shoresh: "שׁ.מ.ע", english: "Hear/Listen" },
             { list: 2, shoresh: "א.כ.ל", english: "Eat" },
             { list: 2, shoresh: "ק.ו.מ", english: "Get up" },
             { list: 2, shoresh: "מ.ו.ת", english: "Die" },
-            { list: 2, shoresh: "י.ש.ב", english: "Sit, Live, Dwell" },
+            { list: 2, shoresh: "י.שׁ.ב", english: "Sit, Live, Dwell" },
             { list: 2, shoresh: "ר.א.ה", english: "See" },
             { list: 2, shoresh: "נ.ת.נ", english: "Give" },
             { list: 2, shoresh: "ב.ו.א", english: "Come" },
             { list: 3, shoresh: "ע.ל.ה", english: "Go up" },
             { list: 3, shoresh: "א.ה.ב", english: "Love" },
             { list: 3, shoresh: "ב.ר.כ", english: "Bless" },
-            { list: 3, shoresh: "ש.ו.ב", english: "Return" },
+            { list: 3, shoresh: "שׁ.ו.ב", english: "Return" },
             { list: 3, shoresh: "מ.צ.א", english: "Find" },
             { list: 3, shoresh: "י.ר.ד", english: "Go down" },
             { list: 3, shoresh: "ע.ב.ד", english: "Work, Serve" },
-            { list: 3, shoresh: "ש.י.מ", english: "Put" },
+            { list: 3, shoresh: "שׂ.י.מ", english: "Put" },
             { list: 3, shoresh: "י.ל.ד", english: "Give Birth/Bring forth" },
             { list: 3, shoresh: "צ.ו.ה", english: "Command" },
             { list: 4, shoresh: "ה.ר.ג", english: "Kill" },
             { list: 4, shoresh: "ז.כ.ר", english: "Remember" },
             { list: 4, shoresh: "א.ס.פ", english: "Gather" },
             { list: 4, shoresh: "ע.נ.ה", english: "Answer, Make suffer" },
-            { list: 4, shoresh: "נ.ש.א", english: "Lift/Carry" },
+            { list: 4, shoresh: "נ.שׂ.א", english: "Lift/Carry" },
             { list: 4, shoresh: "ב.נ.ה", english: "Build" },
             { list: 4, shoresh: "ג.ד.ל", english: "Grow, Be great" },
             { list: 4, shoresh: "ב.ר.א", english: "Create" },
-            { list: 4, shoresh: "ש.מ.ר", english: "Watch, Guard, Keep" },
+            { list: 4, shoresh: "שׁ.מ.ר", english: "Watch, Guard, Keep" },
             { list: 4, shoresh: "מ.ל.א", english: "Fill" },
             { list: 5, shoresh: "נ.ס.ע", english: "Travel" },
             { list: 5, shoresh: "מ.כ.ר", english: "Sell" },
@@ -104,7 +104,7 @@
             { list: 5, shoresh: "ע.ז.ב", english: "Leave" },
             { list: 5, shoresh: "ק.ר.ב", english: "Come close" },
             { list: 5, shoresh: "מ.ה.ר", english: "Hurry/Be Quick" },
-            { list: 5, shoresh: "ש.ת.ה", english: "Drink" },
+            { list: 5, shoresh: "שׁ.ת.ה", english: "Drink" },
             { list: 6, shoresh: "כ.ל.ה", english: "Finish" },
             { list: 6, shoresh: "נ.ג.ד", english: "Tell" },
             { list: 6, shoresh: "ב.ר.ח", english: "Run away" },
@@ -113,30 +113,30 @@
             { list: 6, shoresh: "ב.כ.ה", english: "Cry" },
             { list: 6, shoresh: "י.ר.א", english: "Fear" },
             { list: 6, shoresh: "ח.י.ה", english: "Live" },
-            { list: 6, shoresh: "ב.ק.ש", english: "Ask for/Request" },
-            { list: 6, shoresh: "ח.ש.ב", english: "Think" },
+            { list: 6, shoresh: "ב.ק.שׁ", english: "Ask for/Request" },
+            { list: 6, shoresh: "ח.שׁ.ב", english: "Think" },
             { list: 7, shoresh: "צ.ח.ק", english: "Laugh" },
             { list: 7, shoresh: "ס.ג.ר", english: "Close" },
             { list: 7, shoresh: "צ.ע.ק", english: "Cry Out" },
-            { list: 7, shoresh: "ש.כ.ב", english: "Lay down" },
-            { list: 7, shoresh: "ש.ב.ע", english: "Swear, Promise" },
-            { list: 7, shoresh: "ש.א.ל", english: "Ask" },
+            { list: 7, shoresh: "שׁ.כ.ב", english: "Lay down" },
+            { list: 7, shoresh: "שׁ.ב.ע", english: "Swear, Promise" },
+            { list: 7, shoresh: "שׁ.א.ל", english: "Ask" },
             { list: 7, shoresh: "נ.ו.ח", english: "Rest" },
             { list: 7, shoresh: "ח.ס.ר", english: "Decrease, Become less" },
             { list: 7, shoresh: "ק.נ.ה", english: "Buy" },
             { list: 7, shoresh: "ג.א.ל", english: "Redeem" },
-            { list: 8, shoresh: "י.ר.ש", english: "Inherit, Possess" },
-            { list: 8, shoresh: "מ.ש.ל", english: "Rule" },
-            { list: 8, shoresh: "י.ש.נ", english: "Sleep" },
+            { list: 8, shoresh: "י.ר.שׁ", english: "Inherit, Possess" },
+            { list: 8, shoresh: "מ.שׁ.ל", english: "Rule" },
+            { list: 8, shoresh: "י.שׁ.נ", english: "Sleep" },
             { list: 8, shoresh: "ט.ב.ל", english: "Dip" },
-            { list: 8, shoresh: "י.ש.ע", english: "Save" },
+            { list: 8, shoresh: "י.שׁ.ע", english: "Save" },
             { list: 8, shoresh: "ח.נ.ה", english: "Camp" },
             { list: 8, shoresh: "א.ב.ד", english: "Lose, Destroy" },
             { list: 8, shoresh: "ה.פ.כ", english: "Turn" },
-            { list: 8, shoresh: "ד.ר.ש", english: "Seek out" },
+            { list: 8, shoresh: "ד.ר.שׁ", english: "Seek out" },
             { list: 8, shoresh: "ח.ז.ק", english: "Be strong" },
-            { list: 9, shoresh: "ש.ב.ע", english: "Satisfy" },
-            { list: 9, shoresh: "ש.כ.ח", english: "Forget" },
+            { list: 9, shoresh: "שׂ.ב.ע", english: "Satisfy" },
+            { list: 9, shoresh: "שׁ.כ.ח", english: "Forget" },
             { list: 9, shoresh: "נ.כ.ה", english: "Hit/Strike" },
             { list: 9, shoresh: "נ.ו.ס", english: "Flee/Run away" },
             { list: 9, shoresh: "פ.ק.ד", english: "Appoint, Count, Remember" },
@@ -145,12 +145,12 @@
             { list: 9, shoresh: "ס.פ.ר", english: "Tell, Count" },
             { list: 9, shoresh: "נ.ט.ה", english: "Stretch out" },
             { list: 9, shoresh: "י.ס.פ", english: "Add" },
-            { list: 10, shoresh: "ש.ל.כ", english: "Throw" },
+            { list: 10, shoresh: "שׁ.ל.כ", english: "Throw" },
             { list: 10, shoresh: "ג.ו.ר", english: "Live" },
-            { list: 10, shoresh: "ש.ב.ר", english: "Break" },
+            { list: 10, shoresh: "שׁ.ב.ר", english: "Break" },
             { list: 10, shoresh: "ס.ב.ב", english: "Surround" },
             { list: 10, shoresh: "י.צ.ר", english: "Form" },
-            { list: 10, shoresh: "ש.ח.ת", english: "Destroy" },
+            { list: 10, shoresh: "שׁ.ח.ת", english: "Destroy" },
             { list: 10, shoresh: "נ.ג.ע", english: "Touch" },
             { list: 10, shoresh: "ר.ב.ה", english: "Multiply, Be many" },
             { list: 10, shoresh: "ע.ז.ר", english: "Help" },
@@ -163,82 +163,82 @@
             { list: 11, shoresh: "מ.ל.כ", english: "Be king/Reign" },
             { list: 11, shoresh: "ר.ו.מ", english: "Be high" },
             { list: 11, shoresh: "ר.צ.ה", english: "Want, Be Pleased" },
-            { list: 11, shoresh: "ש.פ.ט", english: "Judge" },
+            { list: 11, shoresh: "שׁ.פ.ט", english: "Judge" },
             { list: 11, shoresh: "נ.צ.ל", english: "Save, Snatch" },
-            { list: 12, shoresh: "ב.ו.ש", english: "Be ashamed/Be embarrassed" },
+            { list: 12, shoresh: "ב.ו.שׁ", english: "Be ashamed/Be embarrassed" },
             { list: 12, shoresh: "ה.ל.ל", english: "Praise" },
             { list: 12, shoresh: "ז.ב.ח", english: "Sacrifice" },
             { list: 12, shoresh: "ב.ט.ח", english: "Trust" },
             { list: 12, shoresh: "י.ת.ר", english: "Remain" },
             { list: 12, shoresh: "ג.ל.ה", english: "Reveal" },
             { list: 12, shoresh: "ל.כ.ד", english: "Capture" },
-            { list: 12, shoresh: "ש.כ.נ", english: "Dwell" },
-            { list: 12, shoresh: "ש.נ.א", english: "Hate" },
+            { list: 12, shoresh: "שׁ.כ.נ", english: "Dwell" },
+            { list: 12, shoresh: "שׂ.נ.א", english: "Hate" },
             { list: 12, shoresh: "ב.י.נ", english: "Understand" },
             { list: 13, shoresh: "כ.פ.ר", english: "Atone/Ask for forgiveness" },
-            { list: 13, shoresh: "נ.ג.ש", english: "Approach" },
+            { list: 13, shoresh: "נ.ג.שׁ", english: "Approach" },
             { list: 13, shoresh: "ל.ח.מ", english: "Fight/Battle" },
             { list: 13, shoresh: "פ.נ.ה", english: "Turn" },
-            { list: 13, shoresh: "ג.ר.ש", english: "Drive out/Chase away" },
-            { list: 13, shoresh: "ש.א.ר", english: "Remain" },
+            { list: 13, shoresh: "ג.ר.שׁ", english: "Drive out/Chase away" },
+            { list: 13, shoresh: "שׁ.א.ר", english: "Remain" },
             { list: 13, shoresh: "ב.ח.ר", english: "Choose" },
             { list: 13, shoresh: "כ.ב.ד", english: "Be heavy, Honor" },
-            { list: 13, shoresh: "ש.ר.פ", english: "Burn" },
-            { list: 13, shoresh: "ל.ב.ש", english: "Put on/Dress" },
+            { list: 13, shoresh: "שׂ.ר.פ", english: "Burn" },
+            { list: 13, shoresh: "ל.ב.שׁ", english: "Put on/Dress" },
             { list: 14, shoresh: "ק.ב.צ", english: "Gather together" },
-            { list: 14, shoresh: "ש.פ.כ", english: "Pour" },
+            { list: 14, shoresh: "שׁ.פ.כ", english: "Pour" },
             { list: 14, shoresh: "מ.א.נ", english: "Refuse" },
             { list: 14, shoresh: "ר.ד.פ", english: "Chase" },
             { list: 14, shoresh: "א.ח.ז", english: "Grab" },
             { list: 14, shoresh: "ד.ר.כ", english: "Walk on" },
             { list: 14, shoresh: "ז.ע.ק", english: "Scream out" },
-            { list: 14, shoresh: "ש.כ.מ", english: "Rise early" },
+            { list: 14, shoresh: "שׁ.כ.מ", english: "Rise early" },
             { list: 14, shoresh: "ב.ע.ר", english: "Burn, Destroy" },
             { list: 14, shoresh: "כ.ע.ס", english: "Be angry" },
             { list: 15, shoresh: "ח.ל.ק", english: "Divide" },
             { list: 15, shoresh: "ח.ר.ה", english: "Be angry" },
             { list: 15, shoresh: "נ.ח.ל", english: "Inherit" },
             { list: 15, shoresh: "ע.ר.ב", english: "Mix" },
-            { list: 15, shoresh: "פ.ר.ש", english: "Spread out" },
-            { list: 15, shoresh: "ש.ק.ה", english: "Give to drink/Water" },
-            { list: 15, shoresh: "ש.מ.ד", english: "Destroy" },
+            { list: 15, shoresh: "פ.ר.שׁ", english: "Spread out" },
+            { list: 15, shoresh: "שׁ.ק.ה", english: "Give to drink/Water" },
+            { list: 15, shoresh: "שׁ.מ.ד", english: "Destroy" },
             { list: 15, shoresh: "ר.ח.מ", english: "Have mercy" },
             { list: 15, shoresh: "ל.ו.נ", english: "Lodge/Sleepover" },
             { list: 15, shoresh: "י.ע.צ", english: "Advise" },
-            { list: 16, shoresh: "ק.ד.ש", english: "Be holy" },
+            { list: 16, shoresh: "ק.ד.שׁ", english: "Be holy" },
             { list: 16, shoresh: "ח.נ.נ", english: "Be gracious" },
             { list: 16, shoresh: "ד.ב.ק", english: "Cling/Stick" },
-            { list: 16, shoresh: "ש.י.ת", english: "Put/Place" },
+            { list: 16, shoresh: "שׁ.י.ת", english: "Put/Place" },
             { list: 16, shoresh: "צ.ל.ח", english: "Succeed, Prosper" },
-            { list: 16, shoresh: "י.ב.ש", english: "Be dry" },
-            { list: 16, shoresh: "ש.ח.ט", english: "Kill, Slaughter" },
-            { list: 16, shoresh: "ת.פ.ש", english: "Catch, Seize" },
-            { list: 16, shoresh: "ש.י.ר", english: "Sing" },
+            { list: 16, shoresh: "י.ב.שׁ", english: "Be dry" },
+            { list: 16, shoresh: "שׁ.ח.ט", english: "Kill, Slaughter" },
+            { list: 16, shoresh: "ת.פ.שׂ", english: "Catch, Seize" },
+            { list: 16, shoresh: "שׁ.י.ר", english: "Sing" },
             { list: 16, shoresh: "ר.כ.ב", english: "Ride" },
             { list: 17, shoresh: "א.ב.ל", english: "Mourn" },
             { list: 17, shoresh: "ח.מ.ל", english: "Pity" },
             { list: 17, shoresh: "מ.ו.ל", english: "Circumcise" },
             { list: 17, shoresh: "ג.נ.ב", english: "Steal" },
             { list: 17, shoresh: "פ.ח.ד", english: "Fear" },
-            { list: 17, shoresh: "נ.ש.ק", english: "Kiss" },
+            { list: 17, shoresh: "נ.שׁ.ק", english: "Kiss" },
             { list: 17, shoresh: "ח.ב.א", english: "Hide" },
             { list: 17, shoresh: "נ.ה.ג", english: "Lead, Drive" },
             { list: 17, shoresh: "י.ר.ה", english: "Instruct, Thank, Cast" },
             { list: 17, shoresh: "ח.ל.ל", english: "Pollute, Begin" },
             { list: 18, shoresh: "ט.מ.א", english: "Be Impure" },
-            { list: 18, shoresh: "ש.ח.ה", english: "Bend down, Bow" },
+            { list: 18, shoresh: "שׁ.ח.ה", english: "Bend down, Bow" },
             { list: 18, shoresh: "ר.ע.ה", english: "Shepherd, Graze" },
             { list: 18, shoresh: "נ.ב.א", english: "Prophesize" },
-            { list: 18, shoresh: "ש.מ.ח", english: "Be Glad" },
+            { list: 18, shoresh: "שׂ.מ.ח", english: "Be Glad" },
             { list: 18, shoresh: "ח.פ.צ", english: "Desire" },
             { list: 18, shoresh: "ר.י.ב", english: "Argue" },
-            { list: 18, shoresh: "ש.ל.מ", english: "Be whole" },
+            { list: 18, shoresh: "שׁ.ל.מ", english: "Be whole" },
             { list: 18, shoresh: "ר.ח.צ", english: "Wash" },
             { list: 18, shoresh: "ח.ל.מ", english: "Dream" },
-            { list: 19, shoresh: "ש.ב.ת", english: "Rest, Stop" },
+            { list: 19, shoresh: "שׁ.ב.ת", english: "Rest, Stop" },
             { list: 19, shoresh: "ה.ר.ס", english: "Break/Tear down" },
             { list: 19, shoresh: "ת.מ.מ", english: "Be complete" },
-            { list: 19, shoresh: "ש.ר.ת", english: "Serve" },
+            { list: 19, shoresh: "שׁ.ר.ת", english: "Serve" },
             { list: 19, shoresh: "ב.ק.ע", english: "Split" },
             { list: 19, shoresh: "ט.ה.ר", english: "Be pure" },
             { list: 19, shoresh: "ח.ל.ה", english: "Be sick" },
@@ -247,7 +247,7 @@
             { list: 19, shoresh: "כ.ר.ע", english: "Bend at the knee" },
             { list: 20, shoresh: "פ.ע.ל", english: "Do, make" },
             { list: 20, shoresh: "ר.ח.ק", english: "Be far" },
-            { list: 20, shoresh: "מ.ש.כ", english: "Drag, Pull, Draw out" },
+            { list: 20, shoresh: "מ.שׁ.כ", english: "Drag, Pull, Draw out" },
             { list: 20, shoresh: "ב.ל.ע", english: "Swallow" },
             { list: 20, shoresh: "ק.ה.ל", english: "Congregate/Assemble" },
             { list: 20, shoresh: "ח.ד.ל", english: "Stop/Cease" },
