Fix shoresh spelling and update entries in index.html
Corrected Hebrew shoresh spelling and added new entries.

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             { list: 16, shoresh: "צ.ל.ח", english: "Succeed, Prosper" },
             { list: 16, shoresh: "י.ב.שׁ", english: "Be dry" },
             { list: 16, shoresh: "שׁ.ח.ט", english: "Kill, Slaughter" },
-            { list: 16, shoresh: "ת.פ.שׂ", english: "Catch, Seize" },
+            { list: 16, shoresh: "ת.פ.שׁ", english: "Catch, Seize" },
             { list: 16, shoresh: "שׁ.י.ר", english: "Sing" },
             { list: 16, shoresh: "ר.כ.ב", english: "Ride" },
             { list: 17, shoresh: "א.ב.ל", english: "Mourn" },
@@ -254,7 +254,107 @@
             { list: 20, shoresh: "ס.ל.ח", english: "Forgive" },
             { list: 20, shoresh: "פ.ר.ד", english: "Separate" },
             { list: 20, shoresh: "נ.ס.ה", english: "Try, Tempt" },
-            { list: 20, shoresh: "ק.נ.א", english: "Be jealous" }
+            { list: 20, shoresh: "ק.נ.א", english: "Be jealous" },
+            { list: 21, shoresh: "פ.ד.ה", english: "Redeem" },
+            { list: 21, shoresh: "ב.א.שׁ", english: "Stink" },
+            { list: 21, shoresh: "י.נ.ק", english: "Nurse, Suck" },
+            { list: 21, shoresh: "מ.שׁ.ח", english: "Anoint" },
+            { list: 21, shoresh: "ס.ג.ר", english: "Shut" },
+            { list: 21, shoresh: "א.פ.ה", english: "Bake" },
+            { list: 21, shoresh: "שׁ.מ.מ", english: "Be astonished, Desolate/Uninhabited" },
+            { list: 21, shoresh: "ס.ת.ר", english: "Conceal/Hide" },
+            { list: 21, shoresh: "ע.ו.ר", english: "Awake" },
+            { list: 21, shoresh: "ק.ט.ר", english: "Burn incense" },
+            { list: 22, shoresh: "ע.ר.כ", english: "Arrange" },
+            { list: 22, shoresh: "פ.ו.צ", english: "Scatter" },
+            { list: 22, shoresh: "א.ר.ר", english: "Curse" },
+            { list: 22, shoresh: "כ.ב.ס", english: "Wash" },
+            { list: 22, shoresh: "מ.ד.ד", english: "Measure" },
+            { list: 22, shoresh: "ח.ר.מ", english: "Devote, Destroy" },
+            { list: 22, shoresh: "כ.שׁ.ל", english: "Stumble, Fail" },
+            { list: 22, shoresh: "ת.ק.ע", english: "Blow" },
+            { list: 22, shoresh: "א.ס.ר", english: "Forbid, Bind" },
+            { list: 22, shoresh: "ב.שׁ.ל", english: "Boil" },
+            { list: 23, shoresh: "ר.נ.נ", english: "Sing, Be joyful" },
+            { list: 23, shoresh: "ג.ז.ל", english: "Steal" },
+            { list: 23, shoresh: "ז.ר.ק", english: "Sprinkle, Throw" },
+            { list: 23, shoresh: "א.שׁ.מ", english: "Be guilty" },
+            { list: 23, shoresh: "ט.ב.ל", english: "Dip" },
+            { list: 23, shoresh: "נ.צ.ח", english: "Win" },
+            { list: 23, shoresh: "א.ב.ה", english: "Be willing" },
+            { list: 23, shoresh: "צ.מ.א", english: "Be thirsty" },
+            { list: 23, shoresh: "מ.ל.ט", english: "Escape" },
+            { list: 23, shoresh: "צ.פ.ה", english: "Watch, Cover" },
+            { list: 24, shoresh: "ז.ר.ע", english: "Sow/Spread seeds" },
+            { list: 24, shoresh: "י.כ.ח", english: "Rebuke" },
+            { list: 24, shoresh: "ק.ל.ל", english: "Curse, Be light" },
+            { list: 24, shoresh: "ל.ק.ט", english: "Gather" },
+            { list: 24, shoresh: "ח.ק.ר", english: "Search" },
+            { list: 24, shoresh: "שׁ.א.ב", english: "Draw water" },
+            { list: 24, shoresh: "ח.ת.מ", english: "Seal" },
+            { list: 24, shoresh: "פ.ר.ה", english: "Be fruitful" },
+            { list: 24, shoresh: "ר.צ.ח", english: "Murder" },
+            { list: 24, shoresh: "ק.ר.ה", english: "Happen, Meet" },
+            { list: 25, shoresh: "צ.פ.נ", english: "Conceal" },
+            { list: 25, shoresh: "נ.ק.ה", english: "Clean, Be innocent" },
+            { list: 25, shoresh: "פ.ג.ע", english: "Meet, Smite/Hit" },
+            { list: 25, shoresh: "ת.ל.ה", english: "Hang" },
+            { list: 25, shoresh: "צ.ד.ק", english: "Be righteous" },
+            { list: 25, shoresh: "מ.ח.ה", english: "Wipe off, Destroy" },
+            { list: 25, shoresh: "נ.ד.ר", english: "Vow/Promise" },
+            { list: 25, shoresh: "צ.מ.ח", english: "Sprout" },
+            { list: 25, shoresh: "י.ס.ד", english: "Found/Establish" },
+            { list: 25, shoresh: "י.צ.ק", english: "Pour out" },
+            { list: 26, shoresh: "פ.ר.ח", english: "Sprout, Flourish" },
+            { list: 26, shoresh: "נ.ס.כ", english: "Pour out, Anoint" },
+            { list: 26, shoresh: "שׁ.פ.ל", english: "Be low" },
+            { list: 26, shoresh: "ר.שׁ.ע", english: "Be wicked" },
+            { list: 26, shoresh: "פ.ר.צ", english: "Spread, Break up" },
+            { list: 26, shoresh: "נ.ו.פ", english: "Shake, Wave, Sift" },
+            { list: 26, shoresh: "מ.ר.ה", english: "Rebel" },
+            { list: 26, shoresh: "נ.ק.מ", english: "Avenge" },
+            { list: 26, shoresh: "א.נ.ח", english: "Sigh" },
+            { list: 26, shoresh: "ר.ג.ל", english: "Spy, Gossip" },
+            { list: 27, shoresh: "ק.שׁ.ר", english: "Bind, Conspire" },
+            { list: 27, shoresh: "ח.פ.שׂ", english: "Search" },
+            { list: 27, shoresh: "ח.ר.שׁ", english: "Plow" },
+            { list: 27, shoresh: "שׁ.ק.ט", english: "Be quiet" },
+            { list: 27, shoresh: "ק.שׁ.ה", english: "Be hard" },
+            { list: 27, shoresh: "ח.ג.ר", english: "Gird/Put on belt" },
+            { list: 27, shoresh: "פ.שׁ.ט", english: "Strip off" },
+            { list: 27, shoresh: "נ.ג.פ", english: "Smite/Strike" },
+            { list: 27, shoresh: "ק.שׁ.ב", english: "Be attentive, Listen" },
+            { list: 27, shoresh: "ע.ו.פ", english: "Fly" },
+            { list: 28, shoresh: "מ.נ.ה", english: "Divide, Allot to" },
+            { list: 28, shoresh: "ק.ו.ה", english: "Wait, Expect" },
+            { list: 28, shoresh: "נ.ו.ע", english: "Move, Nod" },
+            { list: 28, shoresh: "ח.ר.ד", english: "Tremble" },
+            { list: 28, shoresh: "ק.ד.מ", english: "Be Before/Proceed" },
+            { list: 28, shoresh: "ב.ג.ד", english: "Be a traitor" },
+            { list: 28, shoresh: "ח.ב.שׁ", english: "Bind, Put on hat or belt" },
+            { list: 28, shoresh: "ע.ו.ד", english: "Testify" },
+            { list: 28, shoresh: "ח.ב.ר", english: "Join, Associate" },
+            { list: 28, shoresh: "ר.ח.ב", english: "Be wide" },
+            { list: 29, shoresh: "מ.א.ס", english: "Reject" },
+            { list: 29, shoresh: "ח.ז.ה", english: "See/Gaze at" },
+            { list: 29, shoresh: "שׂ.כ.ל", english: "Act wisely, Prosper" },
+            { list: 29, shoresh: "ד.י.נ", english: "Judge" },
+            { list: 29, shoresh: "שׁ.ב.ח", english: "Praise" },
+            { list: 29, shoresh: "ח.ג.ג", english: "Celebrate" },
+            { list: 29, shoresh: "מ.ר.ר", english: "Be bitter" },
+            { list: 29, shoresh: "ק.צ.ר", english: "Be short" },
+            { list: 29, shoresh: "ח.שׁ.כ", english: "Be dark" },
+            { list: 29, shoresh: "ח.כ.ה", english: "Wait" },
+            { list: 30, shoresh: "ג.ז.ר", english: "Cut off" },
+            { list: 30, shoresh: "ח.פ.ר", english: "Dig" },
+            { list: 30, shoresh: "ר.ו.ע", english: "Shout" },
+            { list: 30, shoresh: "מ.ר.ד", english: "Rebel" },
+            { list: 30, shoresh: "כ.נ.ס", english: "Gather" },
+            { list: 30, shoresh: "ט.ב.ע", english: "Sink" },
+            { list: 30, shoresh: "צ.ו.ד", english: "Hunt" },
+            { list: 30, shoresh: "פ.ג.שׁ", english: "Meet" },
+            { list: 30, shoresh: "פ.ק.ח", english: "Open" },
+            { list: 30, shoresh: "י.א.ל", english: "Desire, Be willing" }
         ];
 
         // --- UTILS ---
@@ -267,7 +367,6 @@
             return newArray;
         };
 
-        // NEW: Smarter answer checking logic
         const normalize = (str) => str.toLowerCase().replace(/\s+/g, ' ').trim();
         const getParts = (str) => str.split(/[\/,]+/).map(p => normalize(p)).filter(p => p.length > 0);
 
@@ -287,10 +386,8 @@
                 const acceptedOptions = getParts(normCorrect);
                 const userParts = getParts(normUser);
                 
-                // Must have at least one answer
                 if (userParts.length === 0) return false;
 
-                // FIX: Instead of .some() (is any part correct?), use .every() (is every part correct?)
                 return userParts.every(part => acceptedOptions.includes(part));
             }
 
@@ -560,3 +657,5 @@
     </script>
 </body>
 </html>
+
+
