Fix typo in Hebrew root for 'Catch, Seize'

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             { list: 16, shoresh: "צ.ל.ח", english: "Succeed, Prosper" },
             { list: 16, shoresh: "י.ב.שׁ", english: "Be dry" },
             { list: 16, shoresh: "שׁ.ח.ט", english: "Kill, Slaughter" },
-            { list: 16, shoresh: "ת.פ.שׁ", english: "Catch, Seize" },
+            { list: 16, shoresh: "ת.פ.שׂ", english: "Catch, Seize" },
             { list: 16, shoresh: "שׁ.י.ר", english: "Sing" },
             { list: 16, shoresh: "ר.כ.ב", english: "Ride" },
             { list: 17, shoresh: "א.ב.ל", english: "Mourn" },
