Update grade level in quiz header

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                         <div className="text-center mb-8">
                             <BookOpen className="w-12 h-12 mx-auto text-blue-600 mb-4" />
                             <h1 className="text-3xl font-bold text-gray-800">Tanakh Shorashim Quiz</h1>
-                            <div className="text-gray-500 mt-2 font-medium">5th Grade • Berman Hebrew Academy</div>
+                            <div className="text-gray-500 mt-2 font-medium">4th Grade • 5th Grade • Berman Hebrew Academy</div>
                             <p className="text-gray-400 text-sm mt-1">Select the lists you want to study</p>
                         </div>
 
